# tiny_http_server

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_codebase.sh  generate_build.sh  lint_codebase.sh  main.c  setup.sh
.github/ISSUE_TEMPLATE/: enhancement-request.md
src/: main.c
static/: 404.html  index.html  large.html
static/about/: index.html
